--- a/project/app/templates/hand-div.html
+++ b/project/app/templates/hand-div.html
@@ -27,7 +27,7 @@
                 <div class="toast-body" id="errorText">OK, so, like, that didn't work.</div>
             </div>
         </div>
-        <div class="hand bigfont">
+        <div class="{{ class }}">
             <div class="spades">
                 {% for c in cards.Spades %}<div>{{ c }}</div>{% endfor %}
             </div>
