--- a/project/app/templates/bot-checkbox-partial.html
+++ b/project/app/templates/bot-checkbox-partial.html
@@ -14,7 +14,7 @@
             {% if error_message %}
                 {{ error_message }}
             {% else %}
-                Let the bot play for me
+                Let the computer play for me
             {% endif %}
         </label>
     </div>
