--- a/project/app/templates/read-only_hand.html
+++ b/project/app/templates/read-only_hand.html
@@ -14,45 +14,48 @@
             <h1 style="text-align: center; color: red">This hand was abandoned: {{ hand.abandoned_because }}</h1>
         </div>
     {% endif %}
-    <div style="display: flex; overflow: auto;">{% include "four-hands.html" with class="hand mediumfont" %}</div>
-    <div style="display: flex;">
-        <div style="flex-grow: 1">{% include "auction.html" %}</div>
-    </div>
-    <div>
-        {# TODO -- omit this if _display_and_control wouldn't let us see the cards #}
-        <table class="table caption-top">
-            <caption>Play</caption>
-            <thead>
+    {% ifexists request.user.player %}
+    {% if request.user.player.current_hand %}Current hand: {{ request.user.player.current_hand.as_link }}{% endif %}
+{% endifexists %}
+<div style="display: flex; overflow: auto;">{% include "four-hands.html" with class="hand mediumfont" %}</div>
+<div style="display: flex;">
+    <div style="flex-grow: 1">{% include "auction.html" %}</div>
+</div>
+<div>
+    {# TODO -- omit this if _display_and_control wouldn't let us see the cards #}
+    <table class="table caption-top">
+        <caption>Play</caption>
+        <thead>
+            <tr>
+                <th>Trick</th>
+                <th>Lead</th>
+                <th>2nd</th>
+                <th>3rd</th>
+                <th>4th</th>
+                <th>N/S</th>
+                <th>E/W</th>
+            </tr>
+        </thead>
+        <tbody class="table-group-divider">
+            {% for t in annotated_tricks %}
                 <tr>
-                    <th>Trick</th>
-                    <th>Lead</th>
-                    <th>2nd</th>
-                    <th>3rd</th>
-                    <th>4th</th>
-                    <th>N/S</th>
-                    <th>E/W</th>
+                    <th>{{ t.number }} {{ t.seat }}</th>
+                    {% for p in t.plays %}
+                        <td>
+                            <div {% if p.wins_the_trick %}style="background-color: lightgreen;"{% endif %}>
+                                <span {% ifexists p.card.color %}style="color: {{ p.card.color }}"{% endifexists %}>{{ p.card }}</span>
+                            </div>
+                        </td>
+                    {% endfor %}
+                    <td>
+                        {% if t.ns %}✔{% endif %}
+                    </td>
+                    <td>
+                        {% if t.ew %}✔{% endif %}
+                    </td>
                 </tr>
-            </thead>
-            <tbody class="table-group-divider">
-                {% for t in annotated_tricks %}
-                    <tr>
-                        <th>{{ t.number }} {{ t.seat }}</th>
-                        {% for p in t.plays %}
-                            <td>
-                                <div {% if p.wins_the_trick %}style="background-color: lightgreen;"{% endif %}>
-                                    <span {% ifexists p.card.color %}style="color: {{ p.card.color }}"{% endifexists %}>{{ p.card }}</span>
-                                </div>
-                            </td>
-                        {% endfor %}
-                        <td>
-                            {% if t.ns %}✔{% endif %}
-                        </td>
-                        <td>
-                            {% if t.ew %}✔{% endif %}
-                        </td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
 {% endblock content %}
