"runme": Use dev_settings, duh
Also:

* don't set a default value for DJANGO_SETTINGS_MODULE in asgi.py; force myself to explicitly choose something
* Report the OS platform
* Squish the little context processors into one bigger one
* Ensure our dumped stuff starts on a new line

--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -90,7 +90,12 @@
         </nav>
         {% ifexists debug %}
         <h2>It's debugging time!!</h2>
-        <tt>{{ request.resolver_match.view_name }}</tt>
+        <div style="display: flex;justify-content: space-around;">
+            <div>
+                <tt>{{ request.resolver_match.view_name }}</tt>
+            </div>
+            <div>{{ PLATFORM }}</div>
+        </div>
     {% endifexists %}
     <div class="row">
         <div class="col"></div>
