#four-hands: keep the columns fixed width
That way, as we're watching the hand get played, it doesn't shrink as the cards go away.

--- a/project/app/static/app/bridge.css
+++ b/project/app/static/app/bridge.css
@@ -7,7 +7,7 @@ xx* {
     height: 50%;
     font-family: monospace;
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 25em 25em 25em;
 }
 
 /* from https://www.perplexity.ai/search/in-bootstrap-how-can-i-use-the-Tp82tQ57R3emdSxPG.c79g */
