--- a/project/app/templates/hand_list.html
+++ b/project/app/templates/hand_list.html
@@ -1,11 +1,20 @@
 {% extends "base.html" %}
 {% load player_extras %}
 {% load render_table from django_tables2 %}
+{% load bootstrap3 %}
 {% block title %}
     Hands
 {% endblock title %}
 {% block content %}
     {% block hand_list %}
+        {% if filter %}
+            <div style="display: grid; grid-template-columns: 25% 75%;">
+                <form action="" method="get" class="form form-inline">
+                    {% bootstrap_form filter.form layout='inline' %}
+                    {% bootstrap_button 'filter' button_class="btn-primary" %}
+                </form>
+            </div>
+        {% endif %}
         {% render_table table %}
     {% endblock hand_list %}
 {% endblock content %}
