--- a/project/app/templates/hand_list.html
+++ b/project/app/templates/hand_list.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% load player_extras %}
 {% load render_table from django_tables2 %}
-{% load bootstrap3 %}
 {% block title %}
     Hands
 {% endblock title %}
@@ -10,7 +9,15 @@
         {% if filter %}
             <div style="display: grid; grid-template-columns: 25% 75%;">
                 <form action="" method="get" class="form form-inline">
-                    {% bootstrap_form filter.form layout='inline' %}
+                    <div class="form-group has-success">
+                        <input type="number"
+                               name="board__tournament__display_number"
+                               step="any"
+                               class="form-control"
+                               placeholder="Tournament"
+                               title=""
+                               id="id_board__tournament__display_number">
+                    </div>
                 </form>
             </div>
         {% endif %}
