--- a/project/app/templates/sekrit-wozzit-template.html
+++ b/project/app/templates/sekrit-wozzit-template.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
     Oh maybe we'll let you futz with {{ hand }}
+    Player who can play is {{ hand.player_who_may_play }}; you are {{ request.user.player }}
     <form method="post" action="{% url 'app:play-post' hand.pk %}">
         {% csrf_token %}
         {{ form }}
