Quit using "partials" for the bot checkbox
They're not needed

--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -30,7 +30,7 @@
                         {% else %}
                             {{ user }}.
                         {% endif %}
-                        {% include "bot-checkbox-partial.html#bot-checkbox-partial" with error_message="" %}
+                        {% include "bot-checkbox.html" with error_message="" %}
                         <form method="post" action="{% url 'logout' %}">
                             {% csrf_token %}
                             <input type="submit" value="logout" />
