--- a/project/app/templates/interactive_hand.html
+++ b/project/app/templates/interactive_hand.html
@@ -71,9 +71,9 @@
      });
  {% endif %}
 
- const handEventUrl = '/events/table/html/{{ hand.pk }}/';
- var handEventSource = new ReconnectingEventSource(handEventUrl);
- console.log(`Listening for hand events on ${handEventUrl}`);
+ const tableEventUrl = '/events/table/html/{{ hand.pk }}/';
+ var handEventSource = new ReconnectingEventSource(tableEventUrl);
+ console.log(`Listening for hand events on ${tableEventUrl}`);
 
      handEventSource.addEventListener('message', function (e) {
          const data = JSON.parse(e.data);
