javascript to reload read-only_hand ...
... whenever it receives a "table" event.

It feels inefficient: in theory we should only reload the hand that changed, not the whole page.  At a tempo of one
action per second, with the debug toolbar enabled, the page barely has time to load before it becomes obsolete.

--- a/project/app/templates/read-only_hand.html
+++ b/project/app/templates/read-only_hand.html
@@ -59,3 +59,19 @@
     </table>
 </div>
 {% endblock content %}
+{% block scripts %}
+    <script>
+ const tableEventUrl = '/events/table/html/{{ hand.pk }}/';
+ var handEventSource = new ReconnectingEventSource(tableEventUrl);
+ console.log(`Listening for hand events on ${tableEventUrl}`);
+
+ handEventSource.addEventListener('message', function (e) {
+     const data = JSON.parse(e.data);
+     console.log("Hand event listener saw " + Object.keys(data));
+     window.location.reload();
+
+ }, false);
+
+
+    </script>
+{% endblock scripts %}
