--- a/project/app/templates/new_player_list.html
+++ b/project/app/templates/new_player_list.html
@@ -5,7 +5,7 @@
 {% load render_table from django_tables2 %}
 {% block content %}
     {% block player_list %}
-        <h3>{{ title }} {{ table.page.number }} of {{ table.page.paginator.num_pages }} pages</h3>
+        <h3>{{ title }} {{ table.page.start_index }} through {{ table.page.end_index }} of {{ table.paginator.count }}</h3>
         {% render_table table %}
         {% ifexists create_synth_partner_button %}
         <form action="{% url 'app:player-create-synthetic-partner' %}"
