--- a/project/app/templates/interactive_hand.html
+++ b/project/app/templates/interactive_hand.html
@@ -11,6 +11,32 @@
         <h1>{{ hand.auction.status }}</h1>
         <h1 id="trick-counts-string">{{ hand.trick_counts_string }}</h1>
     </div>
+    <div class="toast-container">
+        <div id="errorToast"
+             class="toast"
+             role="alert"
+             aria-live="assertive"
+             aria-atomic="true">
+            <div class="toast-header">
+                <svg class="bd-placeholder-img rounded me-2"
+                     width="20"
+                     height="20"
+                     xmlns="http://www.w3.org/2000/svg"
+                     aria-hidden="true"
+                     preserveAspectRatio="xMidYMid slice"
+                     focusable="false">
+                    <rect width="100%" height="100%" fill="#007aff"></rect>
+                </svg>
+                <strong class="me-auto">Uh oh</strong>
+                <small>You're in trouble now</small>
+                <button type="button"
+                        class="btn-close"
+                        data-bs-dismiss="toast"
+                        aria-label="Close"></button>
+            </div>
+            <div class="toast-body" id="errorText">OK, so, like, that didn't work.</div>
+        </div>
+    </div>
     {% if hand.auction.found_contract %}
         {% include "carousel_style_play.html" with id=viewers_seat.name %}
     {% else %}
