--- a/project/app/templates/home.html
+++ b/project/app/templates/home.html
@@ -23,4 +23,7 @@
          width="875"
          src="{% static 'app/A_Friend_in_Need_1903_C.M.Coolidge-875w.jpg' %}"
          alt="A Friend In Need by C.M. Coolidge" />
+    <h5>
+        This site uses muffins. By continuing to browse the site, you are agreeing that muffins are delicious <em>and</em> healthy.
+    </h5>
 {% endblock content %}
