Don't always wait exactly five seconds ...
... before scrolling our hand into view.  Instead, wait twice the tournament's tempo.

--- a/project/app/templates/interactive_hand.html
+++ b/project/app/templates/interactive_hand.html
@@ -107,7 +107,7 @@
                  if (activeBit !== null) {
                      activeBit.scrollIntoView ();
                  }
-             }, 5000); // milliseconds
+             }, data["tempo_seconds"] * 2000); // milliseconds.
 
              /* Scrolling counts as "activity". */
              document.querySelector("ul.carousel").addEventListener ("scroll", (event) => {
