Use a bootstrap dropdown thingy.

--- a/project/app/templates/board_list.html
+++ b/project/app/templates/board_list.html
@@ -6,15 +6,16 @@
 {% block content %}
     {% block board_list %}
         {% if filter %}
-            <form action="" method="get" class="form form-inline" style="display: flex">
-                <div class="form-group has-success">
-                    <select class="form-select" name="tournament__display_number">
-                        <option value="">--Choose a Tournament--</option>
-                        {% for option_elt in option_elts %}{{ option_elt }}{% endfor %}
-                    </select>
-                </div>
-                <button type="submit" class="btn btn-primary">Filter by tournament</button>
-            </form>
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle"
+                        type="button"
+                        id="dropdownMenuButton1"
+                        data-bs-toggle="dropdown"
+                        aria-expanded="false">Filter by Tournament</button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                    {% for li in dropdown_list_items %}{{ li }}{% endfor %}
+                </ul>
+            </div>
         {% endif %}
         {% render_table table %}
     {% endblock board_list %}
