--- a/project/app/templates/board_list.html
+++ b/project/app/templates/board_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load render_table from django_tables2 %}
 {% block title %}
-    Boards
+    Boards {{ table.page.start_index }} through {{ table.page.end_index }} of {{ object_list | length }}
 {% endblock title %}
 {% block content %}
     {% block board_list %}
