--- a/project/app/templates/player_list.html
+++ b/project/app/templates/player_list.html
@@ -3,6 +3,9 @@
 {% load fastdev %}
 {% load player_extras %}
 {% load render_table from django_tables2 %}
+{% block title %}
+    Players {{ table.page.start_index }} through {{ table.page.end_index }} of {{ object_list | length }}
+{% endblock title %}
 {% block content %}
     {% block player_list %}
         <h3>{{ title }} {{ table.page.start_index }} through {{ table.page.end_index }} of {{ table.paginator.count }}</h3>
