--- a/project/app/static/app/bridge.css
+++ b/project/app/static/app/bridge.css
@@ -6,8 +6,16 @@ xx* {
     border: 1px solid;
     height: 50%;
     font-family: monospace;
+}
+
+.northsouth {
     display: grid;
-    grid-template-columns: 25em 25em 25em;
+    grid-template-columns: 1fr 2fr 1fr;
+}
+
+.eastwest {
+    display: grid;
+    grid-template-columns: 3fr 5cqw 3fr;
 }
 
 /* from https://www.perplexity.ai/search/in-bootstrap-how-can-i-use-the-Tp82tQ57R3emdSxPG.c79g */
